--- a/desidelight/public/index.html
+++ b/desidelight/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://img.freepik.com/free-vector/hand-drawn-healthy-food-logo_23-2149651916.jpg?t=st=1721539898~exp=1721543498~hmac=be1b2527a29b646cc8110d0a44d546fcea27f88144de99c01bc6cc6e3f2736be&w=740"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -40,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Desi-delight</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
